--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = fastled/FastLED@^3.9.7
+monitor_speed = 115200
+monitor_port = /dev/cu.usbserial-0001
+lib_deps = 
+	fastled/FastLED@^3.9.7
+	h2zero/NimBLE-Arduino@^2.1.2
